tests/ui/parser/recover/unicode-double-equals-recovery.rs
const A: usize ⩵ 2;
//~^ ERROR unknown start of token: \u{2a75}
//~| ERROR unexpected `==`
